# Dynamic-3D-Flight-Path-Simulation-with-OpenSceneGraph

./: .gitignore  CMakeLists.txt  README.md  flight.cpp  gaocheng.cpp
materials/: helicopter2.3ds  highrise.3ds  keypoint.txt
materials/landscape/: 3dterrian.3ds
materials/model/: TransmissionTower.3ds  apartment.3ds  helicopter.3ds  lowrise.3ds  tree.3ds  villa.3ds
